compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_wrong_type.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : string(1.0)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..18: mismatched types
| note for src/main.t:15..18: this is of type `real`
| info: `real` is not an integer type
