compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_wrong_type_bool.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : string(true)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..19: mismatched types
| note for src/main.t:15..19: this is of type `boolean`
| info: `boolean` is not an integer type
