compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typecheck_missing_exprs-2.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: get ()
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
