compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typecheck_missing_exprs-3.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "begin var aaaa : int bind aaaa to end"
---
"aaaa"@"src/main.t:10..14" [ConstVar(Var, No)]: int
"aaaa"@"src/main.t:26..30" [Binding(Const, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
