compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typecheck_missing_exprs.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const ke : int := ()"
---
"ke"@"src/main.t:6..8" [ConstVar(Const, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
