compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_dynamic_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var c : int\nvar _ : array 1 .. c of int"
---
"c"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"_"@"src/main.t:16..17" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
