compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_flexible_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : flexible array 1 .. 0 of int"
---
"_"@(FileId(1), 4..5) [ConstVar(Var, No)]: flexible array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

