compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_less_two.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1..3 of int := init(1)"
---
"a"@"src/main.t:4..5" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:29..36: expected 3 elements, found 1
| error for src/main.t:29..36: `init` list is missing 2 elements
