compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_on_init_sized.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : array 1..* of int := init(1,2,3,4,5)"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Unsized(5)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

