compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_sized.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var _ : array 1 .. * of int := init(1, 2, 3)"
---
"_"@"src/main.t:4..5" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Unsized(3)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
